# weekly-monitor

./: .editorconfig  .editorconfig-checker.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cmd_args.py  helium.py  main.py  models.py  pretty_print.py  pyproject.toml  sellerboard.py  spreadsheets.py
amazon/: business.py  campaign.py  sns.py
config/: products.py  settings.py
