[project]
name = "weekly-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google-auth-httplib2>=0.2.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "ruff>=0.13.0",
]
